--- a/src/main/resources/fxml/interface.fxml
+++ b/src/main/resources/fxml/interface.fxml
@@ -3,35 +3,51 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ButtonController">
+<StackPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ButtonController">
    <children>
-      <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS">
+      <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <children>
-            <Button mnemonicParsing="false" onAction="#addFiles" text="Add files">
-               <font>
-                  <Font size="14.0" />
-               </font></Button>
-            <Button mnemonicParsing="false" onAction="#reset" text="Reset">
-               <font>
-                  <Font size="14.0" />
-               </font></Button>
-            <Button mnemonicParsing="false" onAction="#generate" text="Generate">
-               <font>
-                  <Font size="14.0" />
-               </font></Button>
-            <Button mnemonicParsing="false" onAction="#generateDiffRes" text="Resolutions">
-               <font>
-                  <Font size="14.0" />
-               </font></Button>
+            <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#addFiles" text="Add files">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#reset" text="Reset">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#generate" text="Generate">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#generateDiffRes" text="Resolutions">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </VBox>
+            <Canvas fx:id="canvas" height="700.0" width="700.0" />
          </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </VBox>
-      <Canvas fx:id="canvas" height="700.0" width="700.0" />
+      </HBox>
+      <AnchorPane mouseTransparent="true" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <ProgressBar fx:id="progressBar" layoutX="325.0" layoutY="340.0" prefWidth="200.0" progress="0.0" visible="false" AnchorPane.rightAnchor="275.0" />
+         </children>
+      </AnchorPane>
    </children>
-</HBox>
+</StackPane>
