--- a/src/main/resources/fxml/interface.fxml
+++ b/src/main/resources/fxml/interface.fxml
@@ -4,45 +4,52 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ButtonController">
+<StackPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ButtonController">
    <children>
-      <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+      <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0">
          <children>
             <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Button mnemonicParsing="false" onAction="#addFiles" text="Add files">
+                  <Separator />
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addFiles" text="Add files" VBox.vgrow="ALWAYS">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#reset" text="Reset">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#reset" text="Reset" VBox.vgrow="ALWAYS">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#generate" text="Generate">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#generate" text="Generate" VBox.vgrow="ALWAYS">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#generateDiffRes" text="Resolutions">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#generateDiffRes" text="Resolutions" VBox.vgrow="ALWAYS">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
+                  <Separator />
                </children>
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
             </VBox>
+            <Separator orientation="VERTICAL" />
             <Canvas fx:id="canvas" height="700.0" width="700.0" />
          </children>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+         </padding>
       </HBox>
       <AnchorPane mouseTransparent="true" prefHeight="200.0" prefWidth="200.0">
          <children>
