--- a/src/main/resources/fxml/interface.fxml
+++ b/src/main/resources/fxml/interface.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Tab?>
@@ -12,7 +13,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <TabPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ButtonController">
    <tabs>
@@ -75,6 +75,11 @@
                      <children>
                         <Button mnemonicParsing="false" onAction="#setOutputDirectory" text="Set output directory" />
                         <Button mnemonicParsing="false" onAction="#trimImages" text="Trim images" />
+                        <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <CheckBox fx:id="previewCheckBox" mnemonicParsing="false" onAction="#onCheckboxSelected" selected="true" text="Preview" />
+                           </children>
+                        </HBox>
                      </children>
                   </VBox>
                </children>
